--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
       <div class="card">
         <h3>CafeLuntian POS</h3>
         <p>Point of Sale System for CafeLuntian.</p>
-        <a href="CafeLuntian-main/" target="_blank">View Project</a>
+        <a href="https://github.com/shane-eeey/ShaneKeh-portfolio/tree/main/CafeLuntian-main" class="btn" target="_blank">
+          View on GitHub
+        </a>
+
       </div>
 
       <div class="card">
