Update project title and description for CafeLuntian

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <div class="projects">
 
       <div class="card">
-        <h3>CafeLuntian POS</h3>
-        <p>Point of Sale System for CafeLuntian.</p>
+        <h3>CafeLuntian Web App</h3>
+        <p>Web Application for CafeLuntian.</p>
         <a href="https://github.com/shane-eeey/ShaneKeh-portfolio/tree/main/CafeLuntian-main" class="btn" target="_blank">
           View on GitHub
         </a>
