--- a/index.html
+++ b/index.html
@@ -2,69 +2,176 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Shane Keh | Portfolio</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #111;
-      color: white;
-      margin: 0;
-      padding: 20px;
-    }
-    .container {
-      max-width: 900px;
-      margin: auto;
-    }
-    h1 {
-      font-size: 36px;
-    }
-    .projects {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
-    }
-    .card {
-      background: #1c1c1c;
-      padding: 15px;
-      border-radius: 10px;
-    }
-    .card a {
-      color: #00bcd4;
-      text-decoration: none;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Shane Frankie Keh | Portfolio</title>
+  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>Shane Keh</h1>
-    <p>IT Student | Web Developer</p>
 
-    <h2>My Projects</h2>
-    <div class="projects">
+<!-- ================= HEADER ================= -->
+<header class="header" id="top">
+  <div class="header__content">
+    <h1>
+      Hello, I'm <span>Shane Frankie Keh</span>
+    </h1>
+    <p>Web Developer / Web Designer</p>
+    <a href="#work" class="btn">View My Work</a>
+  </div>
+</header>
 
-      <div class="card">
-        <h3>CafeLuntian Web App</h3>
-        <p>Web Application for CafeLuntian.</p>
-        <a href="https://github.com/shane-eeey/ShaneKeh-portfolio/tree/main/CafeLuntian-main" class="btn" target="_blank">
-          View on GitHub
-        </a>
-
+<!-- ================= ABOUT ================= -->
+<section class="about" id="about">
+  <div class="row">
+    <h2>About Me</h2>
+    <div class="about__content">
+      <div class="about__text">
+        <p>
+          I am a Web Developer and Web Designer who builds simple websites and systems.
+          I focus on creating clean, responsive, and user-friendly interfaces while continuously improving my development skills.
+        </p>
+        <ul class="about__list">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>PHP</li>
+        </ul>
       </div>
 
-      <div class="card">
-        <h3>UB OPAC</h3>
-        <p>Online Public Access Catalog system.</p>
-        <a href="https://github.com/Shane-eeey/UB_OPAC" target="_blank">View on GitHub</a>
+      <div class="about__photo-container">
+        <img class="about__photo" src="./images/shane.jpg" alt="Shane Frankie Keh" />
       </div>
-
-      <div class="card">
-        <h3>CampusLens</h3>
-        <p>Smart Campus Navigation App.</p>
-        <a href="https://github.com/Shane-eeey/CampusLens" target="_blank">View on GitHub</a>
-      </div>
-
     </div>
   </div>
+</section>
+
+<!-- ================= WORK ================= -->
+<section class="work" id="work">
+  <div class="row">
+    <h2>My Projects</h2>
+
+    <!-- PROJECT 1: CafeLuntian Web App -->
+    <div class="work__box">
+      <div class="work__text">
+        <h3>CafeLuntian Web App</h3>
+        <p>
+          A web application for CafeLuntian that showcases menu items and streamlines online interaction for customers.
+        </p>
+        <ul class="work__list">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>PHP</li>
+        </ul>
+
+        <div class="work__links">
+          <a href="#" class="link__text">
+            Visit Site <span>&rarr;</span>
+          </a>
+          <a href="https://github.com/Shane-eeey">
+            <img src="./images/github.svg" class="work__code" alt="GitHub" />
+          </a>
+        </div>
+      </div>
+
+      <div class="work__image-box gallery">
+        <img src="./images/cafeluntian-webapp/1.png" class="work__image" alt="CafeLuntian Web App">
+        <img src="./images/cafeluntian-webapp/2.png" class="work__image" alt="CafeLuntian Web App">
+        <img src="./images/cafeluntian-webapp/3.png" class="work__image" alt="CafeLuntian Web App">
+        <img src="./images/cafeluntian-webapp/4.png" class="work__image" alt="CafeLuntian Web App">
+        <img src="./images/cafeluntian-webapp/5.png" class="work__image" alt="CafeLuntian Web App">
+      </div>
+    </div>
+
+
+    <!-- PROJECT 2: CafeLuntian POS -->
+    <div class="work__box">
+      <div class="work__text">
+        <h3>CafeLuntian POS</h3>
+        <p>
+          A Point of Sale system for CafeLuntian to manage orders, billing, and daily transactions efficiently.
+        </p>
+        <ul class="work__list">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>PHP</li>
+        </ul>
+
+        <div class="work__links">
+          <a href="#" class="link__text">
+            Visit Site <span>&rarr;</span>
+          </a>
+          <a href="https://github.com/Shane-eeey">
+            <img src="./images/github.svg" class="work__code" alt="GitHub" />
+          </a>
+        </div>
+      </div>
+
+      <div class="work__image-box gallery">
+        <img src="./images/cafeluntian-pos/POS1.png" class="work__image" alt="CafeLuntian POS">
+        <img src="./images/cafeluntian-pos/POS2.png" class="work__image" alt="CafeLuntian POS">
+      </div>
+    </div>
+
+
+    <!-- PROJECT 3: UB OPAC -->
+    <div class="work__box">
+      <div class="work__text">
+        <h3>UB OPAC</h3>
+        <p>
+          An Online Public Access Catalog system that allows users to browse and search library resources easily.
+        </p>
+        <ul class="work__list">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>PHP</li>
+        </ul>
+
+        <div class="work__links">
+          <a href="#" class="link__text">
+            View Details <span>&rarr;</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="work__image-box">
+        <img src="./images/placeholder.png" class="work__image" alt="UB OPAC" />
+      </div>
+    </div>
+
+  </div>
+</section>
+
+<!-- ================= CONTACT ================= -->
+<section class="contact" id="contact">
+  <div class="row">
+    <h2>Contact Me</h2>
+    <p>
+      Have a project in mind or want to work together? Feel free to reach out!
+    </p>
+
+    <a href="mailto:shanefrankiek@gmail.com" class="btn">shanefrankiek@gmail.com</a>
+  </div>
+</section>
+
+<!-- ================= FOOTER ================= -->
+<footer class="footer">
+  <div class="row">
+    <ul class="footer__social-links">
+      <li>
+        <a href="https://github.com/Shane-eeey" title="GitHub">
+          <img src="./images/github.svg" class="footer__social-image" alt="GitHub" />
+        </a>
+      </li>
+    </ul>
+
+    <p>
+      © 2025 Shane Frankie Keh. All rights reserved.
+    </p>
+  </div>
+</footer>
+
+<script src="index.js"></script>
 </body>
 </html>
