--- a/index.html
+++ b/index.html
@@ -5,6 +5,81 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shane Frankie Keh | Portfolio</title>
   <link rel="stylesheet" href="index.css" />
+  <style>
+    /* ===== Enhanced Styling ===== */
+    .header {
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      color: #fff;
+      text-align: center;
+      padding: 120px 20px;
+    }
+
+    .header span {
+      color: #00e6e6;
+    }
+
+    .btn {
+      background: #00e6e6;
+      color: #000;
+      padding: 12px 25px;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: 0.3s ease;
+    }
+
+    .btn:hover {
+      background: #fff;
+      transform: scale(1.05);
+    }
+
+    .about__photo {
+      border-radius: 50%;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+      transition: transform 0.4s ease;
+    }
+
+    .about__photo:hover {
+      transform: scale(1.05);
+    }
+
+    .work__box {
+      background: #ffffff;
+      border-radius: 20px;
+      padding: 25px;
+      margin-bottom: 40px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    }
+
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 15px;
+      margin-top: 15px;
+    }
+
+    .gallery img {
+      border-radius: 15px;
+      transition: 0.3s ease;
+      cursor: pointer;
+    }
+
+    .gallery img:hover {
+      transform: scale(1.05);
+      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+    }
+
+    .footer {
+      background: #0f2027;
+      color: #fff;
+      text-align: center;
+      padding: 30px 0;
+    }
+
+    .footer img {
+      filter: brightness(0) invert(1);
+    }
+  </style>
 </head>
 <body>
 
