--- a/index.html
+++ b/index.html
@@ -6,80 +6,180 @@
   <title>Shane Frankie Keh | Portfolio</title>
   <link rel="stylesheet" href="index.css" />
   <style>
-    /* ===== Enhanced Styling ===== */
-    .header {
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      color: #fff;
-      text-align: center;
-      padding: 120px 20px;
-    }
+/* ========== PROFESSIONAL PORTFOLIO REDESIGN ========== */
 
-    .header span {
-      color: #00e6e6;
-    }
+body {
+  font-family: 'Segoe UI', Arial, sans-serif;
+  background: #f3f6f9;
+  margin: 0;
+  color: #222;
+  line-height: 1.6;
+}
 
-    .btn {
-      background: #00e6e6;
-      color: #000;
-      padding: 12px 25px;
-      border-radius: 30px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: 0.3s ease;
-    }
+.row {
+  max-width: 1100px;
+  margin: auto;
+  padding: 40px 20px;
+}
 
-    .btn:hover {
-      background: #fff;
-      transform: scale(1.05);
-    }
+h1, h2, h3 {
+  margin-bottom: 10px;
+}
 
-    .about__photo {
-      border-radius: 50%;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
-      transition: transform 0.4s ease;
-    }
+/* ===== HERO ===== */
+.header {
+  background: linear-gradient(135deg, #1f4037, #99f2c8);
+  color: #fff;
+  text-align: center;
+  padding: 140px 20px;
+}
 
-    .about__photo:hover {
-      transform: scale(1.05);
-    }
+.header h1 {
+  font-size: 3rem;
+}
 
-    .work__box {
-      background: #ffffff;
-      border-radius: 20px;
-      padding: 25px;
-      margin-bottom: 40px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-    }
+.header span {
+  color: #003d2b;
+  background: #ffffffaa;
+  padding: 5px 15px;
+  border-radius: 30px;
+}
 
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 15px;
-      margin-top: 15px;
-    }
+.btn {
+  display: inline-block;
+  margin-top: 20px;
+  background: #003d2b;
+  color: #fff;
+  padding: 12px 30px;
+  border-radius: 50px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: 0.3s ease;
+}
 
-    .gallery img {
-      border-radius: 15px;
-      transition: 0.3s ease;
-      cursor: pointer;
-    }
+.btn:hover {
+  background: #01261d;
+  transform: translateY(-3px);
+}
 
-    .gallery img:hover {
-      transform: scale(1.05);
-      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
-    }
+/* ===== ABOUT ===== */
+.about__content {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 40px;
+}
 
-    .footer {
-      background: #0f2027;
-      color: #fff;
-      text-align: center;
-      padding: 30px 0;
-    }
+.about__text {
+  flex: 1;
+}
 
-    .footer img {
-      filter: brightness(0) invert(1);
-    }
-  </style>
+.about__photo-container {
+  flex: 0 0 260px;
+  text-align: center;
+}
+
+.about__photo {
+  width: 240px;
+  height: 240px;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 6px solid #1f4037;
+  box-shadow: 0 15px 30px rgba(0,0,0,0.2);
+}
+
+.about__list {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 10px 30px;
+  margin-top: 15px;
+}
+
+.about__list li {
+  background: #e2f3ee;
+  padding: 8px 15px;
+  border-radius: 20px;
+  font-weight: 600;
+}
+
+/* ===== PROJECTS ===== */
+.work__box {
+  background: white;
+  border-radius: 20px;
+  padding: 30px;
+  margin-top: 25px;
+  box-shadow: 0 12px 30px rgba(0,0,0,0.08);
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.work__text { flex: 1; }
+
+.work__image-box { flex: 1; }
+
+.work__list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.work__list li {
+  background: #dff3ec;
+  padding: 6px 14px;
+  border-radius: 20px;
+  font-size: 0.9rem;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 15px;
+}
+
+.gallery img {
+  width: 100%;
+  border-radius: 15px;
+  transition: 0.3s ease;
+}
+
+.gallery img:hover {
+  transform: scale(1.05);
+}
+
+/* ===== CONTACT ===== */
+.contact {
+  background: linear-gradient(135deg, #99f2c8, #ffffff);
+  text-align: center;
+}
+
+.contact p { margin-bottom: 15px; }
+
+/* ===== FOOTER ===== */
+.footer {
+  background: #1f4037;
+  color: #fff;
+  text-align: center;
+  padding: 25px 0;
+  margin-top: 40px;
+}
+
+.footer__social-links {
+  list-style: none;
+  padding: 0;
+}
+
+.footer__social-links img {
+  width: 32px;
+}
+
+/* ===== MOBILE ===== */
+@media(max-width: 768px) {
+  .about__content,
+  .work__box { flex-direction: column; text-align: center; }
+  .about__photo { margin: auto; }
+}
+</style>
 </head>
 <body>
 
